# mcp-analysis

./: .eslintrc.cjs  .gitignore  .gitmodules  CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.cjs  pyproject.toml  tsconfig.json
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: README.md
docs/alternatives/: README.md
docs/implementations/: README.md
docs/implementations/good/govuk-mcp/: README.md  assessment.md
docs/prompts/: README.md  deep-research-01.md  deep-research-02.md
docs/reports/: IRI-MCP-briefing-note.md  IRI-The Model Context Protocol (MCP)_ Deep-Dive Analysis.md  IRI-The Model Context Protocol (MCP)_ Deep-Dive Analysis.tex  README.md  The Model Context Protocol (MCP)_ Deep-Dive Analysis.docx  deep-research-02-summary.md
docs/research/: README.md
docs/spec/: README.md  change-log.md
docs/templates/: prompt-template.md
docs/timeline/: README.md
scripts/python/: README.md  docx_export.py  fetch_mcp_spec.py
scripts/typescript/: README.md  specReferences.ts
