[project]
name = "mcp-analysis"
version = "0.1.0"
description = "Documentation and tooling to track the evolution of the Model Context Protocol specification."
requires-python = ">=3.11"
authors = [
    { name = "MCP Analysis Team" }
]
readme = "README.md"
dependencies = []

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.6.4",
    "mypy>=1.11.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
mypy_path = ["scripts/python"]
