[project]
name = "mcp-analysis"
version = "0.1.0"
description = "Documentation and tooling to track the evolution of the Model Context Protocol specification."
requires-python = ">=3.11"
authors = [
    { name = "MCP Analysis Team" }
]
readme = "README.md"
dependencies = []

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "ruff==0.14.5",
    "mypy==1.18.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
mypy_path = ["scripts/python"]
